@@ -1,3 +1,6 @@
+2017-02-20 Harish Potti <harish.potti@cern.ch>
+	* Add Xsec for Sherpa 2.2.1 Diboson and low mass Z+Jets
+	
 2017-02-20 Tamara Vazquez Schroeder <tamara.vazquez.schroeder@cern.ch>
 	* Implement TrigGlobalEfficiencyCorrectionTool for 2LSS, 3L and 4L (SLT||DLT), nominal only
 	* Clean-up Decoration of old PromptLeptonIso
